feat: add header

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online-Zoo</title>
+    <link href="../../assets/styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="/pages/main/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
+    <header class="header">
+        <div class="petRect">
+            <h2 class="h2text rob24">PetStory online</h2>
+            <img class="bamboo" src="../../assets/images/bamboo.svg" alt="bamboo">
+        </div>
+        <nav class="navContainer">
+            <ul class="ulNav">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Map</a></li>
+                <li><a href="#">Zoos</a></li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="#">Contact us</a></li>
+            </ul>
+        </nav>
+        <div>Designed by ©</div>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
